cluster/kube-system/k8s-dashboard/k8s-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-nginx-ingress
  namespace: kube-system
  labels: []
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  # tls: []
  rules:
    - host: "kubernetes-dashboard.cucumbernetes.loc"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 8000
